--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Asclepius"
         tools:targetApi="31">
         <activity
-            android:name=".view.HistoryActivity"
+            android:name=".view.history_view.HistoryActivity"
             android:exported="false" />
         <activity
             android:name=".view.ResultActivity"
